src/Domain/Compiler/Tests/Declaration/VariableDeclaration/__Baselines__/Coercion_64ToS8-StashIr.error
error: Integral type 's64' does not fit into integral type 's8'.
--> main.hs:8:8
  | 
8 | return a;}}§§§§ннн
  |        ^
